--- a/src/components/chat-input/chat-input.module.scss
+++ b/src/components/chat-input/chat-input.module.scss
@@ -1,6 +1,6 @@
 .root {
 }
 .input {
-  border-radius: 1px;
-  border: 1px solid black;
+  border-radius: 2px 2px 0px 0px;
+  border: 0.1px solid black;
 }
