--- a/src/components/chat-input/chat-input.module.scss
+++ b/src/components/chat-input/chat-input.module.scss
@@ -1,6 +1,31 @@
 .root {
+  font-weight: 100;
+  width: 100%;
+  padding-bottom: 0px;
 }
 .input {
-  border-radius: 2px 2px 0px 0px;
-  border: 0.1px solid black;
+  size: 50px;
+  border-radius: 0px 0px 0px 0px;
+  border: 1px solid #fee1ff;
+}
+
+input::placeholder {
+  color: #a7a7a7;
+  font-size: 9px;
+  font-style: normal;
+  padding-left: 5px;
+}
+
+.share {
+  width: 16px;
+  height: 16px;
+  align-self: center;
+  margin-left: 8px;
+}
+.DivInput {
+  display: flex;
+  padding: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+  width: 100%;
 }
