--- a/src/components/chat-icons/chat-icons.module.scss
+++ b/src/components/chat-icons/chat-icons.module.scss
@@ -1,23 +1,31 @@
 .root {
-  padding: 4px 0px;
+  padding: 2px 8px;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   width: 100%;
   color: FEE1FF;
   background-color: #fee1ff;
   border-bottom-right-radius: 4px;
+  box-sizing: border-box;
+  line-height: 16px;
 }
 .AddImage {
-  width: 16px;
-  height: 16px;
-  margin-left: 8px;
+  width: 10px;
+  height: 10px;
+  align-self: center;
+  padding: 0px;
+  opacity: 0.7;
 }
 .ChatIcon {
   justify-content: space-between;
   gap: 100px;
 }
 .AddLink {
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
   margin-left: 8px;
+  padding: 0px;
+}
+.margin-4 {
+  margin-right: 8px;
 }
