--- a/src/components/chat-input/chat-input.module.scss
+++ b/src/components/chat-input/chat-input.module.scss
@@ -17,10 +17,11 @@ input::placeholder {
 }
 
 .share {
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
   align-self: center;
   margin-left: 8px;
+  padding: 0px;
 }
 .DivInput {
   display: flex;
@@ -28,4 +29,5 @@ input::placeholder {
   margin-right: 0px;
   margin-left: 0px;
   width: 100%;
+  height: 24px;
 }
