--- a/src/components/chat-icons/chat-icons.module.scss
+++ b/src/components/chat-icons/chat-icons.module.scss
@@ -1,20 +1,22 @@
 .root {
-  padding: 2px 8px;
+  padding: 8px;
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: auto;
   color: FEE1FF;
   background-color: #fee1ff;
   border-bottom-right-radius: 4px;
   box-sizing: border-box;
   line-height: 16px;
+  gap: 0px;
 }
 .AddImage {
-  width: 10px;
-  height: 10px;
+  width: 18px;
+  height: 18px;
   align-self: center;
-  padding: 0px;
+  padding: 2px;
   opacity: 0.7;
+  margin-right: 1px;
 }
 .ChatIcon {
   justify-content: space-between;
@@ -28,4 +30,6 @@
 }
 .margin-4 {
   margin-right: 8px;
+  width: 18px;
+  height: 18px;
 }
