--- a/src/components/chat-input/chat-input.module.scss
+++ b/src/components/chat-input/chat-input.module.scss
@@ -1,17 +1,21 @@
 .root {
   font-weight: 100;
-  width: 100%;
+  width: auto;
   padding-bottom: 0px;
 }
 .input {
   size: 50px;
   border-radius: 0px 0px 0px 0px;
   border: 1px solid #fee1ff;
+  width: 100%;
+  line-height: 0;
+  font-size: auto;
+  height: auto;
 }
 
 input::placeholder {
   color: #a7a7a7;
-  font-size: 9px;
+  font-size: 16px;
   font-style: normal;
   padding-left: 5px;
 }
@@ -29,5 +33,5 @@ input::placeholder {
   margin-right: 0px;
   margin-left: 0px;
   width: 100%;
-  height: 24px;
+  height: 40px;
 }
